# pyopenms-viewer

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  PLAN_OUT_OF_CORE.md  PR_DESCRIPTION.md  README.md  RELEASE.md  TROUBLESHOOTING.md  WINDOWS_PYINSTALLER_SOLUTION.md  hook-pyopenms.py  ms_data_loader.py  openms_viewer.py  pyi_rth_pyopenms.py  pyinstaller_dll_setup.py  pyopenms-viewer-linux.spec  pyopenms-viewer-windows.spec  pyopenms-viewer.spec  pyopenms_viewer.py  pyproject.toml  test_windows_fix.py
.github/workflows/: build-native.yml  build.yml  linux.yml  windows.yml
hooks/: hook-pyopenms.py  rthook-pyopenms.py
pre_safe_import_module/: hook-pyopenms.py
pyopenms_viewer/: __init__.py  __main__.py  app.py  cli.py
pyopenms_viewer/annotation/: __init__.py  spectrum_annotator.py  theoretical_spectrum.py  tick_formatter.py
pyopenms_viewer/components/: __init__.py  local_file_picker.py
pyopenms_viewer/core/: __init__.py  config.py  data_manager.py  events.py  state.py
pyopenms_viewer/loaders/: __init__.py  chromatogram_loader.py  feature_loader.py  id_loader.py  ion_mobility_loader.py  mzml_loader.py  spectrum_extractor.py
pyopenms_viewer/panels/: __init__.py  base_panel.py  chromatogram_panel.py  custom_range_panel.py  faims_panel.py  features_table_panel.py  im_peak_map_panel.py  peak_map_panel.py  spectra_table_panel.py  spectrum_panel.py  tic_panel.py
pyopenms_viewer/rendering/: __init__.py  axis_renderer.py  minimap_renderer.py  overlay_renderer.py  peak_map_renderer.py
pyopenms_viewer/utils/: __init__.py  coordinate_transform.py
tests/: test_annotation.py  test_cli.py  test_core.py  test_data_manager.py  test_loaders.py  test_ms_data_loader.py  test_performance.py  test_rendering.py
tests/data/: ims_example.mzML
