[project]
name = "pyopenms-viewer"
version = "0.2.0"
description = "Fast mzML peak map viewer using NiceGUI, Datashader, and pyOpenMS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Timo Sachsenberg"},
    {name = "OpenMS Team"}
]
keywords = ["mass-spectrometry", "proteomics", "visualization", "mzML", "OpenMS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "nicegui>=3.3.1",
    "datashader>=0.18.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "colorcet>=3.0.0",
    "pillow>=10.0.0",
    "pyopenms>=3.4.0",
    "pyopenms-viz>=0.1.0",
    "click>=8.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
native = [
    "pywebview>=4.0.0",
    "qtpy>=2.0.0",
    "PyQt6>=6.0.0",
    "PyQt6-WebEngine>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
pyopenms-viewer = "pyopenms_viewer:main"

[project.urls]
Homepage = "https://github.com/OpenMS/OpenMS"
Documentation = "https://openms.de/documentation/"
Repository = "https://github.com/OpenMS/OpenMS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
